# nebulastream-dependencies

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  arm64-linux-nes copy.cmake  arm64-linux-nes.cmake  arm64-osx-nes.cmake  build-arm64.sh  build-linux-arm64.sh  build-linux-steffen.sh  build-linux-x64.sh  build-osx-arm64.sh  build-osx-x64.sh  build-x94.sh  build.sh  dependencies-arm64-linux.sh  dependencies-arm64-osx.sh  dependencies-x64-linux.sh  dependencies-x64-osx.sh  install-llvm-host.sh  manual-build.sh  vcpkg-configuration.json  vcpkg.json  x64-linux-nes.cmake  x64-linux-static.cmake  x64-osx-nes.cmake
.github/workflows/: build.yml  build_test.yml  linux-build.yml
custom-triplets/: .x64-linux-nes.cmake.swp  arm64-linux-nes.cmake  arm64-osx-nes.cmake  x64-linux-musl-nes.cmake  x64-linux-nes.cmake  x64-osx-nes.cmake
docker/: Dockerfile-Ubuntu-20.04  Dockerfile-alpine-3.15  Dockerfile-rocky-8.7  Dockerfile-ubuntu-18.04  Dockerfile-ubuntu-20.04  Dockerfile-ubuntu-21.10  Dockerfile-ubuntu-22.04  Dockerfile-ubuntu-24.04  entrypoint-build.sh
manifest-mode/: CMakeLists.txt  README.md
original-build-script/: build-linux-x64.sh  build.sh  dependencies-arm64-linux.sh  version.sh
vcpkg-registry/ports/antlr4/: portfile.cmake
vcpkg-registry/ports/cppkafka/: portfile.cmake
vcpkg-registry/ports/flatbuffers/: portfile.cmake  vcpkg.json
vcpkg-registry/ports/folly/: fix-musl.patch  nesfolly.patch  portfile.cmake  remove-boost.patch
vcpkg-registry/ports/jemalloc-nes/: portfile.cmake  vcpkg.json
vcpkg-registry/versions/: baseline.json
(+58 files in other folders)
